Add fit in container and ubuntu styling.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
       <script src="node_modules/xterm/lib/xterm.js"></script>
     </head>
     <body>
-      <div id="terminal"></div>
+        <div id="center" style="margin: auto; width: 1080px; height:720px;">
+            <div id="terminal"></div>
+        </div>
     </body>
-      <script src="dist/bundle.js"></script>
+    <script src="dist/bundle.js"></script>
   </html>
 
