added link to funcons-index in front-end

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <div id="center" style="margin: auto; width: 1080px; height:720px;">
-            <div id="terminal"></div>
+          <h2>Funcons-beta REPL</h2>
+          <div id="terminal"></div>
+          <a href='https://plancomps.github.io/CBS-beta/Funcons-beta/Funcons-Index/' target='_blank'>Available funcons</a>
         </div>
     </body>
     <script src="dist/bundle.js"></script>
